--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Page
 email: taemin66@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Tae-min Kim
-  2017.03 ~ 2023.02
-  - Dongseo Univ. Student 
+  <p>2017.03 ~ 2023.02
+  - Dongseo Univ. Student</p>
 # baseurl: "/" # the subpath of your site, e.g. /blog
 # url: "http://ejjoo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: kimtaemin66
